--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -76,15 +76,14 @@
         </tr>
         <tr>
           <th colspan="4"></th>
-
-          <th class="checkboxColumn"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn odd"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn odd"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn odd"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn odd"><span class="iconCheckbox"></span></th>
-          <th class="checkboxColumn"><span class="iconCheckbox"></span></th>
+          <th class="checkboxColumn"><span id="cb-active" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn odd"><span id="cb-select-on" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn odd"><span id="cb-select-allow" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn"><span id="cb-info-on" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn"><span id="cb-info-allow" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn odd"><span id="cb-toggle-on" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn odd"><span id="cb-toggle-allow" class="iconCheckbox"></span></th>
+          <th class="checkboxColumn"><span id="cb-recorder-allow" class="iconCheckbox"></span></th>
           <th></th>
         </tr>
       </thead>
