--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -26,7 +26,7 @@
     {% endif %}
   </ul>
 
-  <div id="sidepane" class="clear sidePane left opened">
+  <div id="sidepane" class="clear sidePane left">
     <ul class="sidePaneTabs">
       <li class="sidePaneTabItem toggleSideBar"></li>
     </ul>
