layertree template added

--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.layertree.css
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.layertree.css
@@ -8,25 +8,25 @@
     right: 2px;
 }
 
-.mb-element-layertree li>input[type=checkbox] {
+.mb-element-layertree li>div input[type=checkbox] {
     margin  : 0;
     padding : 0;
 }
 
-.mb-element-layertree li.queryable>input[type=checkbox] {
+/*.mb-element-layertree li.queryable>input[type=checkbox] {
 
-}
+}*/
 
 /*.mb-element-layertree li>a {
     text-decoration :   none;
     font-color: inherit;
 }*/
 
-.mb-element-layertree ul {
+/*.mb-element-layertree ul {
     min-width: 10px;
-}
+}*/
 
-.mb-element-layertree ul ul {
+.mb-element-layertree>ul ul {
     padding-left: 10px;
 }
 
@@ -39,14 +39,14 @@
 .mb-element-layertree span {
     display: inline-block;
 }
-.mb-element-layertree span.spinner {
+.mb-element-layertree span.layer-spinner {
     width: 14px;
     height: 14px;
     background: url('icons/spinner.gif') no-repeat;
     visibility: hidden;
 }
 
-.mb-element-layertree span.state {
+.mb-element-layertree span.layer-state {
     width: 14px;
     height: 14px;
     visibility: hidden;
@@ -57,11 +57,11 @@
     color: blue;
 }
 
-.mb-element-layertree .menubutton {
+.mb-element-layertree .layer-menu-btn {
     cursor: pointer;
 }
 
-.mb-element-layertree .removebutton {
+.mb-element-layertree .layer-remove-btn {
     cursor: pointer;
 }
 
@@ -69,10 +69,10 @@
     display: block;
 }
 
-.mb-element-layertree li div {
-    display: inline-block;
+.mb-element-layertree li div.layer-properties {
+    display: block;
 }
-
+/*
 .mb-element-layertree li div.layer {
     width: 100%;
 }
@@ -80,22 +80,22 @@
 .mb-element-layertree li div.layer-added {
     position: absolute;
     right: 0px;
-}
-
+}*/
+/*
 .mb-element-layertree span.removebutton {
     font-size: 20px;
-}
+}*/
 
-.mb-element-layertree li.loading span.spinner {
+.mb-element-layertree li.loading>div span.layer-spinner {
     visibility: visible;
 }
 
-.mb-element-layertree li.error span.state {
+.mb-element-layertree li.error>div span.layer-state {
     background: url('icons/error.png') no-repeat;
     visibility: visible;
 }
 
-.mb-element-layertree li.invisible span.state {
+.mb-element-layertree li.invisible>div span.layer-state {
     background: url('icons/invisible.png') 0 2px no-repeat;
     visibility: visible;
 }
