--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,6 +1,33 @@
 <div id="{{ id }}" class="mb-element mb-element-layertree">
+    <li data-sourceid="" data-id="" data-type="" class="hide-elm">
+        <div class="layer-properties">
+            <span class="layer-spinner"></span>
+            <span class="layer-state" title=""></span>
+            <input class="layer-selected" type="checkbox" title="{{ 'Visibility selector' | trans  }}" name="selected">
+            <input class="layer-info" type="checkbox" title="{{ 'FeatureInfo selector' | trans  }}" name="info">
+            <span class="layer-title" title=""></span>
+            <span class="layer-menu-btn">&#9776;
+                <div class="layer-menu" style="display:none">
+                    <div class="layer-opacity">
+                        <div class="layer-opacity-slider"></div>
+                        <div class="layer-opacity-labels">
+                            <span class="layer-opacity-label-hundred">100 %</span>
+                            <span class="layer-opacity-label">{{ "Transparency"|trans }}</span>
+                            <span class="layer-opacity-label-zero">0 %</span>
+                        </div>
+                    </div>
+                    <button class="layer-zoom">{{'Zoom to layer'|trans }}</button>
+                    <button class="layer-metadaten">{{'Metadata'|trans }}</button>
+                    <button class="layer-legende">{{'Legend'|trans }}</button>
+                    <button class="layer-kml-export">{{'KML Export'|trans }}</button>
+                </div>
+            </span>
+            <span class="layer-remove-btn">&times;</span>
+        </div>
+        <ul id="list-first" class="layers"></ul>
+    </li>
     {% if configuration.showHeader %}
-    <h2>{{ 'Sources' | trans }} (<span id="counter">0</span>)<a href="#" id="delete-all" class="icononly" title="Delete all Sources">&times;</a></h2>
+        <h2>{{ 'Sources' | trans }} (<span id="counter">0</span>)<a href="#" id="delete-all" class="icononly" title="{{ 'Delete all Sources' |trans }}">&times;</a></h2>
     {% endif %}
-    <ul id="list-root" class="layers" ></ul>
-</div>
+        <ul id="list-root" class="layers" ></ul>
+    </div>
