--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -1,5 +1,6 @@
 <div id="{{ id }}" class="mb-element mb-element-wmsloader" title="{{ configuration.tooltip|default(title)|trans }}">
-    <p>{{"Bitte geben Sie die Adresse zum Dienst ein"|trans}}:</p>
-    <input class="url" type="text" />
-    <p>{{ "Beispiel"|trans }}: http://www.example.com/wms/services?request=GetCapabilities&amp;service=WMS&amp;version=1.1.1</p>
+    <p class="description">{{ "Example"|trans }}: http://www.example.com/wms/services?request=GetCapabilities&amp;service=WMS&amp;version=1.1.1</p>
+    <br>
+    <label class="labelInput" for="loadWmsUrl">{{"Service url"|trans}}</label>
+    <input name="loadWmsUrl" class="input url" type="text" />
 </div>
