--- a/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/copyright.html.twig
@@ -1,12 +1,11 @@
 <div id="{{ id }}" class="mb-element mb-element-copyright"  title="{{ configuration.tooltip|default(title)|trans }}">
     <span class="span-copyright" title="">{{ configuration.copyrigh_text |trans |raw }}</span>
-    {% if configuration.dialog_link is defined and configuration.dialog_link != ''%}
+    {% if configuration.link_type == 'url' %}
     <br/>
-    {% if configuration.link_type == 'dialog' %}
-    <span id="{{ id }}-link" class="mb-element-copyright-link">{{ configuration.copyright_link |trans |raw }}</span>
-    {% elseif configuration.link_type == 'url' %}
     <a id="{{ id }}-link" class="mb-element-copyright-link" href="{{ configuration.link_url }}" target="_BLANK">{{ configuration.copyright_link |trans |raw }}</a>
-    {% endif %}
+    {% elseif configuration.link_type == 'dialog' %}
+    <br/>
+    <span id="{{ id }}-link" class="mb-element-copyright-link">{{ configuration.copyright_link |trans |raw }}</span>
     <div id="{{ id }}-dialog" class="mb-element-copyright-dialog" title="{{ configuration.dialog_title |trans |raw }}">
         <p>{{ configuration.dialog_content |trans |raw }}</p>
     </div>
