--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -6,7 +6,7 @@
   <ul id="listFilterLayersets" class="listFilterContainer clear listFilterBoxes listFilterServiceBoxes">
     {% for layerset in application.layersets %}
       <li class="filterItem">
-        <h3 class="left subTitle">{{ layerset.title }}</h3>
+        <h3 class="subTitle">{{ layerset.title }}</h3>
         <table class="tableCore layersetTable" data-id="{{ layerset.id }}">
           <thead>
             <tr>
