--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance-layer-form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance-layer-form.html.twig
@@ -21,14 +21,14 @@
             <td class="minScaleColumn" title="{{ "MinScale"|trans }}">{{ form_widget(form_layer.minScale) }}</td>
             <td class="maxScaleColumn" title="{{ "MaxSclase"|trans }}">{{ form_widget(form_layer.maxScale) }}</td>
 
-            <td class="checkboxColumn" data-cb="cb-active" title="{{ "Active"|trans }}">{{ form_widget(form_layer.active) }}</td>
-            <td class="checkboxColumn odd" data-cb="cb-select-on" title="{{ "Selected  at TOC"|trans }}">{{ form_widget(form_layer.selected) }}</td>
-            <td class="checkboxColumn odd" data-cb="cb-select-allow" title="{{ "Allow Select at TOC"|trans }}">{{ form_widget(form_layer.allowselected) }}</td>
-            <td class="checkboxColumn" data-cb="cb-info-on" title="{{ "FeatureInfo at TOC"|trans }}">{{ form_widget(form_layer.info) }}</td>
-            <td class="checkboxColumn" data-cb="cb-info-allow" title="{{ "Allow FeatureInfo at TOC"|trans }}">{{ form_widget(form_layer.allowinfo) }}</td>
-            <td class="checkboxColumn odd" data-cb="cb-toggle-on" title="{{ "Toggle at TOC"|trans }}">{{ form_widget(form_layer.toggle) }}</td>
-            <td class="checkboxColumn odd" data-cb="cb-toggle-allow" title="{{ "Allow Toggle at TOC"|trans }}">{{ form_widget(form_layer.allowtoggle) }}</td>
-            <td class="checkboxColumn" data-cb="cb-recorder-allow" title="{{ "Allow Reorder at TOC"|trans }}">{{ form_widget(form_layer.allowreorder) }}</td>
+            <td class="checkboxColumn" data-check-identifier="checkActive" title="{{ "Active"|trans }}">{{ form_widget(form_layer.active) }}</td>
+            <td class="checkboxColumn odd" data-check-identifier="checkSelectOn" title="{{ "Selected  at TOC"|trans }}">{{ form_widget(form_layer.selected) }}</td>
+            <td class="checkboxColumn odd" data-check-identifier="checkSelectAllow" title="{{ "Allow Select at TOC"|trans }}">{{ form_widget(form_layer.allowselected) }}</td>
+            <td class="checkboxColumn" data-check-identifier="checkInfoOn" title="{{ "FeatureInfo at TOC"|trans }}">{{ form_widget(form_layer.info) }}</td>
+            <td class="checkboxColumn" data-check-identifier="checkInfoAllow" title="{{ "Allow FeatureInfo at TOC"|trans }}">{{ form_widget(form_layer.allowinfo) }}</td>
+            <td class="checkboxColumn odd" data-check-identifier="checkToggleOn" title="{{ "Toggle at TOC"|trans }}">{{ form_widget(form_layer.toggle) }}</td>
+            <td class="checkboxColumn odd" data-check-identifier="checkToggleAllow" title="{{ "Allow Toggle at TOC"|trans }}">{{ form_widget(form_layer.allowtoggle) }}</td>
+            <td class="checkboxColumn" data-check-identifier="checkRecorderAllow" title="{{ "Allow Reorder at TOC"|trans }}">{{ form_widget(form_layer.allowreorder) }}</td>
             <td class="moreColumn">
               <span class="iconMore" title="{{'More informations'|trans}}">
                 <div class="infoMsgBox hide">
