--- a/src/Mapbender/ManagerBundle/Resources/views/Element/wms_loader.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/wms_loader.html.twig
@@ -9,8 +9,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.defaultformat) }}{{ form_widget(form.configuration.defaultformat) }}
+    {{ form_label(form.configuration.defaultFormat) }}{{ form_widget(form.configuration.defaultFormat) }}
     <div class="clearContainer"></div>
-    {{ form_label(form.configuration.defaultinfoformat) }}{{ form_widget(form.configuration.defaultinfoformat) }}
+    {{ form_label(form.configuration.defaultInfoFormat) }}{{ form_widget(form.configuration.defaultInfoFormat) }}
     <div class="clearContainer"></div>
 </div>
