--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -25,8 +25,9 @@
               <div class="dropdownValue iconDown"></div>
               <ul class="dropdownList"></ul>
             </div>
-
-
+            <div>
+              <input class="input" type="text" name="scale_text" size="8"/>
+            </div>
             <label class="labelInput" for="rotation">{{ 'Rotation' | trans }}</label>
             <input class="input" type="text" name="rotation"/>
             <div class="clearContainer"></div>
