--- a/src/Mapbender/ManagerBundle/Resources/views/Element/layer_tree.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/layer_tree.html.twig
@@ -1,6 +1,6 @@
 <div class="elementFormLayerTree elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"Draggable"|trans}}</label>
+        {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"Show Base Sources"|trans}}</label>
     </div>
     <div class="left">
         {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
